--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,6 @@
 aside {
     padding: 10px;
-    background-color: lightcoral;
+    background-color: rgb(196, 114, 114);
     color: darkslategray;
     border-radius: 10px;
     position: absolute;
