--- a/public/index.css
+++ b/public/index.css
@@ -1,9 +1,12 @@
 h1 {
     padding: 10px;
-    background-color: rgb(196, 114, 114);
     color: darkslategray;
     border-radius: 10px;
     position: absolute;
     top: 10px;
     right: 10px;
+}
+
+body {
+    background-color: rgb(196, 114, 114)
 }
